[gd_scene load_steps=30 format=3 uid="uid://m60bwhdpbem8"]

[ext_resource type="PackedScene" uid="uid://cvogxi7mktumf" path="res://components/Abstracts/EntityBase.tscn" id="1_3ves7"]
[ext_resource type="Script" path="res://scripts/Contents/Characters/Bear.gd" id="2_kh2af"]
[ext_resource type="AudioStream" uid="uid://dqhrycmnkwojq" path="res://resources/sounds/bossAttack/Bear/Arrow7.ogg" id="3_n5dji"]
[ext_resource type="AudioStream" uid="uid://bxks728nvv83c" path="res://resources/sounds/bossAttack/Bear/SunDance.ogg" id="4_meklc"]
[ext_resource type="AudioStream" uid="uid://dhcm3pjj82xhg" path="res://resources/sounds/bossAttack/Bear/ForeverRainbow.ogg" id="5_vej16"]
[ext_resource type="AudioStream" uid="uid://cqh2yvwcy83gg" path="res://resources/sounds/bossAttack/Bear/Sprint.ogg" id="6_x3jmu"]
[ext_resource type="AudioStream" uid="uid://ce8xjsh68momv" path="res://resources/sounds/bossAttack/Bear/Arrow7-2.ogg" id="7_0r2df"]
[ext_resource type="AudioStream" uid="uid://dd18jfva1knwm" path="res://resources/sounds/bossAttack/Bear/LightGun.ogg" id="8_qagkm"]
[ext_resource type="Texture2D" uid="uid://cgngjuc21l4xq" path="res://resources/characters/bear/FurryR.png" id="9_av1u2"]
[ext_resource type="Shader" path="res://shaders/RedTemprature.gdshader" id="12_j8sas"]
[ext_resource type="Texture2D" uid="uid://df6ly7iydtcwx" path="res://resources/characters/bear/FurryR-mask.png" id="13_v2sdb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6tgxs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_av1u2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_av1u2")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akdh6"]
size = Vector2(100, 100)

[sub_resource type="Animation" id="Animation_sxh2u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_vxanw"]
resource_name = "left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_nuh11"]
resource_name = "left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dwflo"]
_data = {
"RESET": SubResource("Animation_sxh2u"),
"left": SubResource("Animation_vxanw"),
"right": SubResource("Animation_nuh11")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6h05p"]
shader = ExtResource("12_j8sas")

[sub_resource type="Curve" id="Curve_bm78d"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.2, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_8q862"]
curve = SubResource("Curve_bm78d")

[sub_resource type="Curve" id="Curve_ixlo1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_u5n7f"]
curve = SubResource("Curve_ixlo1")

[sub_resource type="Gradient" id="Gradient_vg70m"]
offsets = PackedFloat32Array(0, 0.16, 0.32, 0.48, 0.64, 0.8, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.447059, 0, 1, 1, 0.890625, 0, 1, 0, 0.820313, 0.128174, 1, 0, 1, 0.859375, 1, 0, 0.53125, 1, 1, 0.429688, 0, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_psgmo"]
gradient = SubResource("Gradient_vg70m")

[sub_resource type="Gradient" id="Gradient_6x70l"]
colors = PackedColorArray(0.1, 0.1, 0.1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vxwls"]
gradient = SubResource("Gradient_6x70l")

[sub_resource type="Curve" id="Curve_glsl5"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.2, 0.75), 0.0, 0.0, 0, 0, Vector2(1, 0.3), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_g2o7h"]
curve = SubResource("Curve_glsl5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nv4nf"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(50, 50, 1)
angle_min = 1.07288e-05
angle_max = 360.0
angle_curve = SubResource("CurveTexture_u5n7f")
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_g2o7h")
color = Color(10, 10, 10, 1)
color_ramp = SubResource("GradientTexture1D_vxwls")
color_initial_ramp = SubResource("GradientTexture1D_psgmo")
alpha_curve = SubResource("CurveTexture_8q862")

[node name="Bear" instance=ExtResource("1_3ves7")]
script = ExtResource("2_kh2af")
displayName = "熊谷凌"
metadata/_edit_vertical_guides_ = [-50.0]

[node name="attack0" parent="sounds" index="5"]
stream = ExtResource("3_n5dji")

[node name="attack1" type="AudioStreamPlayer2D" parent="sounds" index="6"]
stream = ExtResource("4_meklc")

[node name="attack2" type="AudioStreamPlayer2D" parent="sounds" index="7"]
stream = ExtResource("5_vej16")

[node name="attack3" type="AudioStreamPlayer2D" parent="sounds" index="8"]
stream = ExtResource("6_x3jmu")

[node name="attack4" type="AudioStreamPlayer2D" parent="sounds" index="9"]
stream = ExtResource("7_0r2df")

[node name="attack5" type="AudioStreamPlayer2D" parent="sounds" index="10"]
stream = ExtResource("8_qagkm")

[node name="attack6" type="AudioStreamPlayer2D" parent="sounds" index="11"]
stream = ExtResource("8_qagkm")

[node name="texture" parent="." index="2"]
sprite_frames = SubResource("SpriteFrames_6tgxs")

[node name="hitbox" parent="texture/hurtbox" index="0"]
shape = SubResource("RectangleShape2D_akdh6")

[node name="animator" parent="texture" index="1"]
libraries = {
"": SubResource("AnimationLibrary_dwflo")
}

[node name="normal" type="Node2D" parent="texture/weapons" index="0"]

[node name="mask" type="Sprite2D" parent="texture" index="7"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_6h05p")
texture = ExtResource("13_v2sdb")

[node name="sprintParticle" type="GPUParticles2D" parent="texture" index="8"]
unique_name_in_owner = true
z_index = -1
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_nv4nf")
texture = ExtResource("13_v2sdb")

[node name="statebar" parent="." index="3"]
position = Vector2(0, -114)

[node name="movebox" parent="." index="4"]
disabled = true
